gatekeeper/templates/required-serviceaccountname.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: requiredserviceaccountname
  annotations:
    description: >-
      Requires the given resource to have the
      .spec.serviceAccountName field set.
spec:
  crd:
    spec:
      names:
        kind: RequiredServiceAccountName
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requiredserviceaccountname

        violation[{"msg": msg}] {
          value := object.get(input.review.object.spec, "serviceAccountName", "")
          value == ""
          msg := "must have a serviceAccountName set"
        }
